Fix mobile layout issue

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,7 +35,7 @@ main {
 	}
 }
 
-@media (min-width: 375px) {
+@media (min-width: 376px) {
 	main {
 		display: flex;
 
